--- a/README.org
+++ b/README.org
@@ -68,7 +68,7 @@ $ git pull
 (require :cluster-engine)
 #+end_src  
  
-   The library should now be loaded, and you solve musical constraint satisfaction problems (CSP). The first example below is an "empty" problem without any constraints yet. The function =clusterengine= is the constraint solver. Its first three arguments specify the number of variables (quasi notes) per voice (10 in this example), whether or not to randomise the solution (T) and whether to use additional debugging features (nil).  After a list of constraints (empty) the function expects specifications for various domains. These specifications support a mini language for flexibility, the specifications below are very simple. Only a single time signature is allowed (all bars are in 3/4); the single voice can consist of quarter notes and eighth notes; and possible pitches are middle C and C# (MIDI note numbers 60 and 61).  
+The library should now be loaded, and you solve musical constraint satisfaction problems. The first example below is an "empty" problem without any constraints yet. The function =clusterengine= is the constraint solver. Its first three arguments specify the number of variables (quasi notes) per voice (10 in this example), whether or not to randomise the solution (T) and whether to use additional debugging features (nil).  After a list of constraints (empty) the function expects specifications for various domains. These specifications support a mini language for flexibility, the specifications below are very simple. Only a single time signature is allowed (all bars are in 3/4); the single voice can consist of quarter notes and eighth notes; and possible pitches are middle C and C# (MIDI note numbers 60 and 61).  
 
 #+begin_src lisp :tangle yes   
 (ce::clusterengine 
@@ -91,11 +91,42 @@ $ git pull
  ((3 4) (3 4) (3 4)))
 #+end_src
 
-The output is automatically translated into a notated score in PWGL, and can be translated into a polyphonic OpusModus score with the function =cluster-engine-score= provided by the library [[https://github.com/tanders/tot][tot]].
+The output is automatically translated into a notated score in PWGL, and can be translated into a OpusModus score with the function =cluster-engine-score=, which in turn can be translated into a notated score with =preview-score= -- both functions provided by the library [[https://github.com/tanders/tot][tot]].
 
 #+begin_src lisp :tangle yes    
 (:|1| ((q c4 e cs4 c4 cs4 cs4 tie) (e cs4 c4 c4 c4 c4 cs4)))
 #+end_src
+
+The above constraint problem does not include any musical rules. Without a detailed discussion, in the following a polyphonic example with a few rules is shown (example 8a translated from the PWGL tutorial into plain Common Lisp). Here, the first rule forces both voices to create 12-tone rows. Rule 2 constrains all harmonic intervals between both voices to consonant intervals or 3, 4, 7, 8 or 9 semitones. Finally, the last rule forbids any voice crossings. A possible result is shown below the code.
+
+#+begin_src lisp :tangle yes    
+(preview-cluster-engine-score
+ (ce::clusterengine 
+  12 t nil 
+  (append 
+   ;; rule 1
+   (ce::r-pitches-one-voice #'(lambda (x) 
+				(not (member (mod (car (last x)) 12)
+					     (mapcar #'(lambda (a) (mod a 12)) (butlast x)))))
+			    '(0 1) :all-pitches)
+   ;; rule 2
+   (ce::r-pitch-pitch #'(lambda (x) 
+			  (member (mod (ce::apply-minus x) 12) '(3 4 7 8 9)))
+		      '(0 1) '(0) :all :no_grace :pitch)
+   ;; rule 3
+   (ce::R-pitch-pitch #'(lambda (x) (>= (first x) (second x)) )
+		      '(0 1) '(0) :all :no_grace :pitch)) 
+  '((4 4)) 
+  '(;; domains of rhythmic values and pitches of voice 1
+    ((1/4)) 
+    ((60) (61) (62) (63) (64) (65) (66) (67) (68) (69) (70) (71) (72) (73) (74) (75) (76) (77) (78) (79))
+    ;; domains of rhythmic values and pitches of voice 2
+    ((1/4)) 
+    ((60) (61) (62) (63) (64) (65) (66) (67) (68) (69) (70) (71) (72) (73) (74) (75) (76) (77) (78) (79)))))
+#+end_src
+
+[[file:graphics/polyphonic-solution.jpg]]
+
 
 For further information refer to the PWGL tutorial for now. Pretty much all PWGL boxes have their equivalent Common Lisp function/macro with the same arguments. An exception is the function =clusterengine= itself, where domains of rhythmic values and pitches are defined in Common Lisp as shown above. 
 
