--- a/README.org
+++ b/README.org
@@ -1,3 +1,7 @@
+#+TITLE: The Cluster Engine Music Constraint Solver
+#+AUTHOR: Torsten Anders
+#+OPTIONS: toc:t num:nil h:3
+
 * Cluster Engine
 
 Cluster Engine is a constraint solver for solving polyphonic constraint satisfaction problems where both the pitch and the rhythmic structure can be restricted by an arbitrary number of constraints (rules), and the solver then searches for a solution that is consistent with all constraints. This library supports user-defined rules, and highly flexible ways to control which aspects of the resulting score are controlled by certain rules. For example, you can independently control with compositional rules the melody and harmony of the music you generate. 
@@ -136,4 +140,16 @@ For further information refer to the PWGL tutorial for now. Pretty much all PWGL
 
 
 
+* Temp test for reStructuredText export
+
+Documenting a function with Sphinx Python function syntax -- this is a temp hack (e.g., function not included in index) 
+
+#+ATTR_RST: :title (clusterengine no-of-variables rnd? debug? rules metric-domain list-of-domains)
+#+BEGIN_function
+Here goes the function documentation.
+
+:param int NO-OF-VARIABLES: Here goes the arg doc
+:param bool RND?: Here goes the arg doc
+:param bool DEBUG?: Here goes the arg doc
+#+END_function
 
